Light mode colours also in dark mode. Discard-button dimensions correct in all browsers.

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
 }
 
+html,
 body {
+  color-scheme: light;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,4 +17,5 @@ body {
 .App {
   width: 100%;
   height: 100%;
+  color-scheme: light;
 }
